--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.6",
     "chart.js": "^4.4.0",
+    "formik": "^2.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -22,7 +23,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
